force-app/main/default/objects/custom_create163__c/custom_create163__c.object-meta.xml
<CustomObject>
    <label>Custom created object163</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects163</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>