force-app/main/default/objects/custom_create163__c/fields/custom_create_163field523__c.field-meta.xml
<CustomField>
    <fullName>custom_create_163field523__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 163field523</label>
    <type>Checkbox</type>
</CustomField>